--- a/assign2/frontend/templates/index.html
+++ b/assign2/frontend/templates/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Frontend Service</title>
+    <title>Frontend Service v2</title>
 </head>
 <body>
-    <h1>Frontend Service</h1>
+    <h1>Frontend Service v2</h1>
 
     <h2>Current Message:</h2>
     <p id="current-message">{{ current_message }}</p>
+
+    {% if timestamp %}
+    <h2>Last Upadted At:</h2>
+    <p>{{ timestamp }}</p>
+    {% endif %}
 
     <h2>Update Message</h2>
     <form action="/update" method="post">
